# hw-fastapi-8

./: pyproject.toml  sql_app.db
app/: database.py  flowers_repository.py  main.py  users_repository.py
scripts/: launch.sh
