[tool.poetry]
name = "hw-fastapi-8"
version = "0.1.0"
description = ""
authors = ["Azamat <dzhunebaev@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_fastapi_8"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
sqlalchemy = "^2.0.19"
pydantic = "^2.1.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
attrs = "^23.1.0"
alembic = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
